Finished conjunto de datos

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -22,3 +22,9 @@
 .primary-color {
     color: #00b3ee;
 }
+
+.box-graph {
+    background-color: #b77239;
+    color: white;
+    border: 10px solid #ffac2e;
+}
