--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.heading {
     font-family: "Original Surfer", sans-serif;
     font-weight: 400;
     font-style: normal;
